@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.james</groupId>
         <artifactId>james-project</artifactId>
-        <version>1.6</version>
+        <version>1.7</version>
         <relativePath></relativePath>
     </parent>
 
@@ -39,10 +39,6 @@
     <description>Hupa is a GWT based Webmail</description>
     <url>http://james.apache.org/hupa</url>
     <inceptionYear>2009</inceptionYear>
-
-    <prerequisites>
-        <maven>3.0.2</maven>
-    </prerequisites>
 
     <modules>
         <module>mock</module>
@@ -61,22 +57,17 @@
         <system>JIRA</system>
         <url>http://issues.apache.org/jira/browse/Hupa</url>
     </issueManagement>
-    <ciManagement>
-        <system>Hudson</system>
-        <url>https://builds.apache.org/view/G-L/view/James/job/hupa-trunk/</url>
-    </ciManagement>
 
     <distributionManagement>
         <site>
             <id>hupa-website</id>
-            <url>scp://people.apache.org/www/james.apache.org/hupa/</url>
+            <url>scpexe://people.apache.org/www/james.apache.org/hupa/</url>
         </site>
     </distributionManagement>
 
     <properties>
         <gwtVersion>2.4.0</gwtVersion>
         <gwtMavenVersion>2.4.0</gwtMavenVersion>
-        <target.jdk>1.6</target.jdk>
     </properties>
 
     <dependencyManagement>
@@ -339,82 +330,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.5</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jxr-plugin</artifactId>
-                    <version>2.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-pmd-plugin</artifactId>
-                    <version>2.5</version>
-                    <configuration>
-                        <targetJdk>${target.jdk}</targetJdk>
-                        <rulesets>
-                            <ruleset>/rulesets/basic.xml</ruleset>
-                            <ruleset>/rulesets/controversial.xml</ruleset>
-                        </rulesets>
-                        <format>xml</format>
-                        <linkXref>true</linkXref>
-                        <sourceEncoding>utf-8</sourceEncoding>
-                        <minimumTokens>100</minimumTokens>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.rat</groupId>
-                    <artifactId>apache-rat-plugin</artifactId>
-                    <version>0.7</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.3.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.7</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-eclipse-plugin</artifactId>
-                    <version>2.8</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
-                    <configuration>
-                        <source>${target.jdk}</source>
-                        <target>${target.jdk}</target>
-                        <encoding>iso8859-1</encoding>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-remote-resources-plugin</artifactId>
-                    <version>1.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.7.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.7.2</version>
-                </plugin>
-                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>emma-maven-plugin</artifactId>
                     <inherited>true</inherited>
@@ -453,7 +368,6 @@
                 <plugin>
                     <groupId>org.bsc.maven</groupId>
                     <artifactId>maven-processor-plugin</artifactId>
-                    <version>2.0.5</version>
                     <dependencies>
                         <dependency>
                             <groupId>com.google.web.bindery</groupId>
@@ -462,230 +376,21 @@
                         </dependency>
                     </dependencies>
                 </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.7</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>versions-maven-plugin</artifactId>
-                    <version>1.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>2.3.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>dashboard-maven-plugin</artifactId>
-                    <version>1.0.0-beta-1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>2.5.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.1.1</version>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-            <!-- Site generation -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
+            <plugin>      
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>emma-maven-plugin</artifactId>
+                <inherited>true</inherited>          
                 <executions>
-                    <!-- Attach non-reporting site-descriptor when installing -->
                     <execution>
-                        <id>attach-descriptor</id>
+                        <phase>process-classes</phase>               
                         <goals>
-                            <goal>attach-descriptor</goal>
+                            <goal>instrument</goal>
                         </goals>
-                        <configuration>
-                            <siteDirectory>${basedir}/src/site</siteDirectory>
-                            <generateReports>false</generateReports>
-                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <siteDirectory>${maven-site-plugin.siteDirectory}</siteDirectory>
-                    <generateReports>${maven-site-plugin.generateReports}</generateReports>
-                    <generateSitemap>true</generateSitemap>
-                    <reportPlugins>
-                        <!-- Order matters. First project-info-reports, second jxr. -->
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>cim</report>
-                                        <report>dependencies</report>
-                                        <report>dependency-convergence</report>
-                                        <report>dependency-management</report>
-                                        <report>distribution-management</report>
-                                        <report>help</report>
-                                        <report>index</report>
-                                        <report>issue-tracking</report>
-                                        <report>license</report>
-                                        <report>mailing-list</report>
-                                        <report>modules</report>
-                                        <report>plugin-management</report>
-                                        <report>plugins</report>
-                                        <report>project-team</report>
-                                        <report>scm</report>
-                                        <report>summary</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-jxr-plugin</artifactId>
-                            <configuration>
-                                <aggregate>true</aggregate>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-pmd-plugin</artifactId>
-                            <configuration>
-                                <linkXref>true</linkXref>
-                                <sourceEncoding>utf-8</sourceEncoding>
-                                <minimumTokens>100</minimumTokens>
-                                <targetJdk>1.5</targetJdk>
-                                <aggregate>true</aggregate>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-report-plugin</artifactId>
-                            <configuration>
-                                <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
-                                <aggregate>true</aggregate>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.rat</groupId>
-                            <artifactId>apache-rat-plugin</artifactId>
-                            <configuration>
-                                <excludeSubProjects>false</excludeSubProjects>
-                                <excludes>
-                                    <!-- MAVEN_DEFAULT_EXCLUDES -->
-                                    <exclude>**/target/**/*</exclude>
-                                    <exclude>**/cobertura.ser</exclude>
-                                    <!-- ECLIPSE_DEFAULT_EXCLUDES -->
-                                    <exclude>**/.classpath</exclude>
-                                    <exclude>**/.project</exclude>
-                                    <exclude>**/.settings/**/*</exclude>
-                                    <!-- IDEA_DEFAULT_EXCLUDES -->
-                                    <exclude>**/*.iml</exclude>
-                                    <exclude>**/*.ipr</exclude>
-                                    <exclude>**/*.iws</exclude>
-                                    <!-- MANIFEST_MF_EXCLUDES -->
-                                    <exclude>**/MANIFEST.MF</exclude>
-                                    <!-- GWT log files -->
-                                    <exclude>**/.gwt-log</exclude>
-                                    <!-- Mock messages -->
-                                    <exclude>**/resources/mime/*.msg</exclude>
-                                </excludes>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>versions-maven-plugin</artifactId>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>dependency-updates-report</report>
-                                        <report>plugin-updates-report</report>
-                                        <report>property-updates-report</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>findbugs-maven-plugin</artifactId>
-                            <configuration>
-                                <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation>
-                                <xrefTestLocation>${project.reporting.outputDirectory}/../xref-test</xrefTestLocation>
-                                <!-- required by dashboard plugin and hudson -->
-                                <xmlOutput>true</xmlOutput>
-                                <effort>Max</effort>
-                                <findbugsXmlOutput>true</findbugsXmlOutput>
-                                <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>versions-maven-plugin</artifactId>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>dependency-updates-report</report>
-                                        <report>plugin-updates-report</report>
-                                        <report>property-updates-report</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>cobertura-maven-plugin</artifactId>
-                            <configuration>
-                                <instrumentation>
-                                    <excludes>
-                                    </excludes>
-                                </instrumentation>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <configuration>
-                                <minmemory>256m</minmemory>
-                                <maxmemory>1g</maxmemory>
-                                <linksource>true</linksource>
-                                <tags>
-                                    <tag>
-                                        <name>note</name>
-                                        <placement>a</placement>
-                                        <head>NOTE</head>
-                                    </tag>
-                                    <tag>
-                                        <name>todo</name>
-                                        <placement>a</placement>
-                                        <head>TODO</head>
-                                    </tag>
-                                    <tag>
-                                        <name>warning</name>
-                                        <placement>a</placement>
-                                        <head>WARNING</head>
-                                    </tag>
-                                </tags>
-                                <source>${target.jdk}</source>
-                            </configuration>
-                            <reportSets>
-                                <reportSet>
-                                    <reports>
-                                        <report>aggregate</report>
-                                        <report>test-aggregate</report>
-                                    </reports>
-                                </reportSet>
-                            </reportSets>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>dashboard-maven-plugin</artifactId>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
             </plugin>
         </plugins>
     </build>
